@@ -74,21 +74,16 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
+		<dependency>
+        <groupId>org.codehaus.groovy</groupId>
+        <artifactId>groovy</artifactId>
+        <version>3.0.8</version>
+    </dependency>
 	</dependencies> 
 
 	<build>
 		<plugins>		
-			<plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-surefire-plugin</artifactId>
-		<version>${maven-surefire-plugin.version}</version>
-		<configuration>
-			<skipTests>${skip.unit.tests}</skipTests>
-			<argLine>
-				${argLine} --illegal-access=permit
-			</argLine>
-		</configuration>
-	</plugin>
+			
 
 	<plugin>
 		<groupId>org.apache.maven.plugins</groupId>
